--- a/pythia-backend/build.gradle
+++ b/pythia-backend/build.gradle
@@ -71,7 +71,7 @@ dependencies {
     
     compile group: 'com.amazonaws', name: 'aws-java-sdk', version: '1.11.213'
    
-    
+    compile group: 'org.aioobe.cloudconvert', name: 'client', version: '1.1'
     
 }
 
