--- a/Dockerfile.dist
+++ b/Dockerfile.dist
@@ -20,13 +20,13 @@ USER root
 USER ${USERNAME}
 
 # Copy entrypoint to the parent directory, so that we can change its permissions
-COPY --chown=voltti:voltti entrypoint.sh ..
-RUN chmod +x ../entrypoint-dist.sh
+COPY --chown=voltti:voltti entrypoint-dist.sh .
+RUN chmod +x ./entrypoint-dist.sh
 
 # Expose Spring Boot's embedded server
 EXPOSE 8080
 
-ENTRYPOINT ["/usr/src/entrypoint-dist.sh"]
+ENTRYPOINT ["/usr/src/app/entrypoint-dist.sh"]
 
 
 CMD ["bootRun"]
