--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,11 @@ apply plugin: 'org.springframework.boot'
 apply plugin: "io.spring.dependency-management"
 apply plugin: 'org.flywaydb.flyway'
 
+
+jar {
+    baseName = 'teppo-service'
+}
+
 // The config below corresponds to nuora-compose's db
 // see 'Overriding order' from https://flywaydb.org/documentation/gradle
 def dbName = 'teppo'
@@ -76,6 +81,7 @@ flyway {
 
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
+
 
 repositories {
     mavenCentral()
@@ -97,6 +103,7 @@ tasks.withType(JavaCompile) {
 tasks.withType(Jar) {
     archiveName = "$baseName.$extension"
 }
+
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-actuator')
